[package]
name = "ndn-tlv-derive"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Named Data Networking - Tlv derive helpers"


[lib]
proc-macro = true


[dependencies]
syn = { version = "2.0.100", features = ["full", "extra-traits"] }
darling = { version = "0.20.11" }
proc-macro2 = "1.0.94"
quote = "1.0.40"


[lints]
workspace = true
